Removes payments
