# config/routes.rb
@@ -30,10 +30,8 @@ Rails.application.routes.draw do
       get 'profile', to: 'users#show'
       resources :businesses
       resources :children
-      resources :payments
       resources :case_cycles
       resources :child_case_cycles
-      resources :child_case_cycle_payments
       resources :attendances
     end
   end
@@ -81,12 +79,6 @@ end
 #                                       PATCH  /api/v1/children/:id(.:format)                                                           api/v1/children#update {:format=>:json}
 #                                       PUT    /api/v1/children/:id(.:format)                                                           api/v1/children#update {:format=>:json}
 #                                       DELETE /api/v1/children/:id(.:format)                                                           api/v1/children#destroy {:format=>:json}
-#                              payments GET    /api/v1/payments(.:format)                                                               api/v1/payments#index {:format=>:json}
-#                                       POST   /api/v1/payments(.:format)                                                               api/v1/payments#create {:format=>:json}
-#                               payment GET    /api/v1/payments/:id(.:format)                                                           api/v1/payments#show {:format=>:json}
-#                                       PATCH  /api/v1/payments/:id(.:format)                                                           api/v1/payments#update {:format=>:json}
-#                                       PUT    /api/v1/payments/:id(.:format)                                                           api/v1/payments#update {:format=>:json}
-#                                       DELETE /api/v1/payments/:id(.:format)                                                           api/v1/payments#destroy {:format=>:json}
 #                           case_cycles GET    /api/v1/case_cycles(.:format)                                                            api/v1/case_cycles#index {:format=>:json}
 #                                       POST   /api/v1/case_cycles(.:format)                                                            api/v1/case_cycles#create {:format=>:json}
 #                            case_cycle GET    /api/v1/case_cycles/:id(.:format)                                                        api/v1/case_cycles#show {:format=>:json}
@@ -99,12 +91,6 @@ end
 #                                       PATCH  /api/v1/child_case_cycles/:id(.:format)                                                  api/v1/child_case_cycles#update {:format=>:json}
 #                                       PUT    /api/v1/child_case_cycles/:id(.:format)                                                  api/v1/child_case_cycles#update {:format=>:json}
 #                                       DELETE /api/v1/child_case_cycles/:id(.:format)                                                  api/v1/child_case_cycles#destroy {:format=>:json}
-#             child_case_cycle_payments GET    /api/v1/child_case_cycle_payments(.:format)                                              api/v1/child_case_cycle_payments#index {:format=>:json}
-#                                       POST   /api/v1/child_case_cycle_payments(.:format)                                              api/v1/child_case_cycle_payments#create {:format=>:json}
-#              child_case_cycle_payment GET    /api/v1/child_case_cycle_payments/:id(.:format)                                          api/v1/child_case_cycle_payments#show {:format=>:json}
-#                                       PATCH  /api/v1/child_case_cycle_payments/:id(.:format)                                          api/v1/child_case_cycle_payments#update {:format=>:json}
-#                                       PUT    /api/v1/child_case_cycle_payments/:id(.:format)                                          api/v1/child_case_cycle_payments#update {:format=>:json}
-#                                       DELETE /api/v1/child_case_cycle_payments/:id(.:format)                                          api/v1/child_case_cycle_payments#destroy {:format=>:json}
 #                           attendances GET    /api/v1/attendances(.:format)                                                            api/v1/attendances#index {:format=>:json}
 #                                       POST   /api/v1/attendances(.:format)                                                            api/v1/attendances#create {:format=>:json}
 #                            attendance GET    /api/v1/attendances/:id(.:format)                                                        api/v1/attendances#show {:format=>:json}
